internal/service/ec2/testdata/RouteTableAssociation/region_override/main_gen.tf
# Copyright IBM Corp. 2014, 2026
# SPDX-License-Identifier: MPL-2.0

resource "aws_route_table_association" "test" {
  region = var.region

  route_table_id = aws_route_table.test.id
  subnet_id      = aws_subnet.test.id
}

resource "aws_route_table" "test" {
  region = var.region

  vpc_id = aws_vpc.test.id

  route {
    cidr_block = "10.0.0.0/8"
    gateway_id = aws_internet_gateway.test.id
  }
}

# testAccRouteTableAssociationConfigBaseVPC

resource "aws_vpc" "test" {
  region = var.region

  cidr_block = "10.1.0.0/16"
}

resource "aws_subnet" "test" {
  region = var.region

  vpc_id     = aws_vpc.test.id
  cidr_block = "10.1.1.0/24"
}

resource "aws_internet_gateway" "test" {
  region = var.region

  vpc_id = aws_vpc.test.id
}

variable "rName" {
  description = "Name for resource"
  type        = string
  nullable    = false
}

variable "region" {
  description = "Region to deploy resource in"
  type        = string
  nullable    = false
}
